# DaffyChat

./: .gitignore  AGENT_PROGRESS.md  BOT_API.md  CMakeLists.txt  COMPLETION_ASSESSMENT.md  DEPLOY.md  ENABLING_FRONTEND_VOICE_TRANSPORT.md  EXTENSIBILITY.md  GRANULAR_COMPLETION_PLAN.md  GUIDE.md  INSTALL.md  P0_COMPLETION_REPORT.md  P0_P1_COMPLETION_SUMMARY.md  P1_STATUS_REPORT.md  README.md  RECIPES.md  SPHINX_SETUP_COMPLETE.md  VOICE_TRANSPORT_API.md  build.meson  build.ninja  meson.build  meson_options.txt  package.sh
cmake/: DaffyVendoredDependencies.cmake
config/: daffychat.example.conf  daffychat.example.json
daffyc/: main.cpp
daffyc/codegen/: wasm_emitter.hpp
daffyc/parser/: grammar.hpp
daffyc/sema/: symbol_table.hpp
daffyc/stdlib/: ldc_bindings.h  recipe_atoms.h
daffyscript/: README.md  main.cpp
daffyscript/ast/: ast.h  ast_builder.hpp  ast_printer.hpp
daffyscript/codegen/: wasm_emitter.hpp
daffyscript/diag/: diagnostic.hpp
daffyscript/examples/: message-highlighter.dfy  poll-bot.dfyp  study-pod.dfyr
daffyscript/lexer/: token.h
daffyscript/sema/: sema.hpp
daffyscript/stdlib/: dfc_bindings.h  dfc_bridge_sse.dfy
docs/: .gitignore  Doxyfile  README.md  build-docs.sh  conf.py  index.rst  installation.rst  introduction.rst  quickstart.rst  requirements.txt  server-setup.rst
docs/api/cpp/: index.rst
docs/api/python/: index.rst
docs/api/rest/: index.rst
docs/architecture/: control-plane.rst  extension-plane.rst  media-plane.rst  overview.md
docs/daffyscript/: README.md  compiler.md  examples.md  index.rst  language-reference.md  modules.md  programs.md  recipes.md
docs/development/: building.rst  contributing.rst  testing.rst
docs/dssl/: README.md  best-practices.md  code-generation.md  getting-started.md  index.rst  language-reference.md  toolchain.md
docs/dssl/examples/: README.md  bot_api.dssl  bot_api.rst  echo.dssl  echo.rst  health.dssl  health.rst  implementation-notes.md  index.rst  room_ops.dssl  room_ops.rst
docs/operations/: configuration.rst  deployment.rst  monitoring.rst  troubleshooting.rst
dssl/: README.md
dssl/ast/: ast.h  ast_builder.hpp  ast_printer.hpp
dssl/codegen/: target.h
dssl/codegen/cpp/: cpp_gen.hpp
dssl/codegen/json/: json_gen.hpp
dssl/diag/: diagnostic.hpp
dssl/examples/: echo.dssl
dssl/include/: dssl-plugin.h
dssl/lexer/: token.h
dssl/parser/: grammar.hpp
dssl/sema/: sema.hpp  symbol_table.hpp
dssl/tools/bindgen/: main.cpp
dssl/tools/docgen/: main.cpp
dssl/tools/docstrip/: main.cpp
frontend/: README.md  bridge.js
frontend/app/api/: extension-manager.js  signaling.js  socketio-voice-transport.js
frontend/app/components/: extension-panel.js  message-renderer.js  theme-toggle.js
frontend/app/hooks/: bridge-hooks.js
frontend/app/state/: store.js
frontend/app/styles/: daffy.css
frontend/extensions/: README.md  catalog.json  example-extension.json
frontend/lib/: quote.js  wasm-runtime.js
frontend/resources/: box-icons.list  error-messages.json  quotes.json
include/: usrsctp.h
include/daffy/config/: app_config.hpp
include/daffy/ipc/: nng_transport.hpp
include/daffy/rooms/: events.hpp  models.hpp  room_registry.hpp
include/daffy/runtime/: daemon_manager.hpp  event_bus.hpp
include/daffy/services/: bot_api_service.hpp  echo_service.hpp  event_bridge_service.hpp  health_service.hpp  room_ops_service.hpp  room_state_service.hpp  service_metadata.hpp  service_registry.hpp
include/daffy/signaling/: admin_http_server.hpp  messages.hpp  native_signaling_client.hpp  server.hpp  signaling_client_facade.hpp  socketio_voice_transport.hpp  uwebsockets_server.hpp
include/daffy/util/: json.hpp
include/daffy/voice/: audio_pipeline.hpp  audio_processing.hpp  libdatachannel_peer.hpp  live_voice_session.hpp  opus_codec.hpp  (+8 more)
include/plog/: Log.h
scripts/: archive-service.py  daffybackend.service  daffydmd.service  daffysignaling.service  deploy.sh  externlib_service.sh  install-frontend.sh  linking-service.sh  os-service.pl  post-install.sh  stdext-helper.sh
services/specs/: botapi.dssl  echo.dssl  room_ops.dssl
src/cli/: backend_main.cpp  bot_api_service_main.cpp  daffydmd_main.cpp  echo_service_main.cpp  event_bridge_service_main.cpp  health_service_main.cpp  room_ops_service_main.cpp  room_state_service_main.cpp  signaling_main.cpp
src/config/: app_config.cpp
src/ipc/: nng_transport.cpp
src/rooms/: events.cpp  models.cpp  room_registry.cpp
src/runtime/: daemon_manager.cpp  event_bus.cpp
src/services/: bot_api_service.cpp  echo_service.cpp  event_bridge_service.cpp  health_service.cpp  room_ops_service.cpp  room_state_service.cpp  service_metadata.cpp  service_registry.cpp
src/signaling/: admin_http_server.cpp  messages.cpp  native_signaling_client.cpp  server.cpp  signaling_client_facade.cpp  socketio_voice_transport.cpp  uwebsockets_server.cpp
src/util/: json.cpp
src/voice/: audio_pipeline.cpp  audio_processing.cpp  libdatachannel_peer.cpp  live_voice_session.cpp  media_worker.cpp  native_voice_client.cpp  opus_codec.cpp  portaudio_runtime.cpp  portaudio_streams.cpp  rtp_srtp.cpp  voice_loopback_harness.cpp  voice_peer_session.cpp  voice_session_facade.cpp
src/web/: voice_diagnostics_http_server.cpp  webhook.cpp
stdext/: README.md
tests/frontend/: bridge_bootstrap_smoke.js
tests/integration/: daemon_manager.cpp  room_lifecycle.cpp  service_integration.cpp  signaling_admin_http.cpp  signaling_flow.cpp  signaling_http_api.cpp  signaling_native_client.cpp  signaling_uwebsockets.cpp  tier3_peer_session.cpp  voice_diagnostics_http.cpp
tests/unit/: bootstrap_smoke.cpp  bot_api_service.cpp  builtin_services.cpp  daffyscript_toolchain.cpp  dssl_toolchain.cpp  event_bridge_service.cpp  generated_multi_rpc_service.cpp  service_vertical_slice.cpp  tier1_core.cpp  tier3_media.cpp  tier3_native_voice_client_fake.cpp  tier3_portaudio.cpp  tier3_portaudio_streams.cpp  tier3_transport.cpp  tier3_voice.cpp  tier3_voice_loopback_fake.cpp
toolchain/: dfc-mkrecipe.py  dssl-bindgen.py  dssl-init.py  install-service.py  package_artifact.py  plugin-init.py
(+14 files in other folders)
